Adding initial screen

--- a/sistema-front/src/app/app.component.html
+++ b/sistema-front/src/app/app.component.html
@@ -1,3 +1,4 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <span>Sistema de cadastro de cursos</span>
 </mat-toolbar>
+<router-outlet></router-outlet>
