--- a/sistema-front/src/app/courses/courses/courses.component.html
+++ b/sistema-front/src/app/courses/courses/courses.component.html
@@ -14,10 +14,14 @@
         <td mat-cell *matCellDef="let course">{{ course.name }}</td>
       </ng-container>
 
-      <!-- Name Column -->
+      <!-- Category Column -->
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef>Categoria</th>
-        <td mat-cell *matCellDef="let course">{{ course.category }}</td>
+        <td mat-cell *matCellDef="let course">
+          {{ course.category }}
+          <mat-icon aria-hidden="false" aria-label="Categoria do curso">{{course.category | category}}</mat-icon>
+        </td>
+
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
