adding route to courses/new

--- a/sistema-front/src/app/courses/courses/courses.component.html
+++ b/sistema-front/src/app/courses/courses/courses.component.html
@@ -26,7 +26,7 @@
       <!-- Action Column -->
       <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef>
-          <button mat-raised-button color="primary" (click)="onAdd">Adicionar</button>
+          <button mat-raised-button color="primary" (click)="onAdd()">Adicionar</button>
         </mat-header-cell>
         <mat-cell *matCellDef="let course">
           <button mat-raised-button color="raised">Editar</button>
