--- a/sistema-front/src/app/courses/course-form/course-form.component.scss
+++ b/sistema-front/src/app/courses/course-form/course-form.component.scss
@@ -1,7 +1,7 @@
 .full-width{
     margin-top: 1em;
     width: 100%;
-}   
+}
 mat-card{
     width: 50%;
     margin: 2em auto;
@@ -10,4 +10,13 @@ mat-card{
 .min-width {
     width: 100%;
     min-width: 150px;
+}
+
+mat-card-actions {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 16px;
+  button {
+    margin-left: 8px;
+  }
 }
